prometheus/extra-example-deployment-2.yml
# This file contains a new deployment and service that are almost the same as the ones in the example app iac folder
# The key difference is that these will have different names to avoid conflicts and this will not have a route,
# making it not accessable externally. Prometheus should still be able to read this.
---
apiVersion: v1
kind: DeploymentConfig
metadata:
  labels:
    app: example-node-app-non-monitored
  name: example-node-app-non-monitored
spec:
  replicas: 1
  selector:
    deploymentconfig: example-node-app-non-monitored
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        app: example-node-app-non-monitored
        deploymentconfig: example-node-app-non-monitored
    spec:
      containers:
        - imagePullPolicy: Always
          name: example-node-app-non-monitored
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 128Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
          - example-node-app-non-monitored
        from:
          kind: ImageStreamTag
          name: 'example-node-app:latest'
          namespace: myproject
      type: ImageChange
    - type: ConfigChange
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: example-node-app-non-monitored
  name: example-node-app-non-monitored
spec:
  ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    deploymentconfig: example-node-app-non-monitored
  sessionAffinity: None
  type: ClusterIP
