prometheus/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: prometheus
  name: prometheus
spec:
  ports:
  - name: 9090-tcp
    port: 9090
    protocol: TCP
    targetPort: 9090
  selector:
    deploymentconfig: prometheus
  sessionAffinity: None
  type: ClusterIP
