prometheus/route.yml
apiVersion: v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    app: prometheus
  name: prometheus
spec:
  port:
    targetPort: 9090-tcp
  to:
    kind: Service
    name: prometheus
    weight: 100
  wildcardPolicy: None
