prometheus/network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-prometheus-monitor
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          project: metrics
  podSelector: 
    matchLabels:
      monitor: prometheus
  policyTypes:
  - Ingress
